[tool.poetry]
name = "python-custom-log-handler"
version = "0.1.0"
description = ""
authors = ["Vinícius Oliveira <eu@viniciusoliveira.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
